--- a/simulation/api-istio/apis.yaml
+++ b/simulation/api-istio/apis.yaml
@@ -33,7 +33,8 @@ metadata:
   name: api1
   namespace: api-istio
   labels:
-    app: api1
+    app: api
+    api: api1
     service: api1
 spec:
   ports:
@@ -41,7 +42,8 @@ spec:
     port: 80
     targetPort: 80
   selector:
-    app: api1
+    app: api
+    api: api1
 ---
 apiVersion: v1
 kind: Service
@@ -49,7 +51,8 @@ metadata:
   name: api2
   namespace: api-istio
   labels:
-    app: api2
+    app: api
+    api: api2
     service: api2
 spec:
   ports:
@@ -57,7 +60,8 @@ spec:
     port: 80
     targetPort: 80
   selector:
-    app: api2
+    app: api
+    api: api2
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -68,12 +72,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api1
+      app: api
+      api: api1
       version: v1
   template:
     metadata:
       labels:
-        app: api1
+        app: api
+        api: api1
         version: v1
     spec:
       serviceAccountName: api1
@@ -96,12 +102,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api2
+      app: api
+      api: api2
       version: v1
   template:
     metadata:
       labels:
-        app: api2
+        app: api
+        api: api2
         version: v1
     spec:
       serviceAccountName: api2
