--- a/simulation/multi-cluster/multi-network/client.yaml
+++ b/simulation/multi-cluster/multi-network/client.yaml
@@ -30,7 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: client2
-  namespace: api-istio
+  namespace: clientns
   labels:
     app: client2
     service: client2
