--- a/simulation/multi-cluster/multi-network/api-deployment.yaml
+++ b/simulation/multi-cluster/multi-network/api-deployment.yaml
@@ -1,69 +1,39 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: client1
-  namespace: app-istio
+  name: api1
+  namespace: api-istio
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: client2
-  namespace: app-istio
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: client1
-  namespace: app-istio
-  labels:
-    app: client1
-    service: client1
-spec:
-  ports:
-    - name: http
-      port: 80
-      targetPort: 80
-  selector:
-    app: client1
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: client2
-  namespace: app-istio
-  labels:
-    app: client2
-    service: client2
-spec:
-  ports:
-    - name: http
-      port: 80
-      targetPort: 80
-  selector:
-    app: client2
+  name: api2
+  namespace: api-istio
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: client1
-  namespace: app-istio
+  name: api1
+  namespace: api-istio
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: client1
+      app: api
+      api: api1
       version: v1
   template:
     metadata:
       labels:
-        app: client1
+        app: api
+        api: api1
         version: v1
     spec:
-      serviceAccountName: client1
+      serviceAccountName: api1
       containers:
         - image: daime/http-dump
           imagePullPolicy: IfNotPresent
-          name: client1
+          name: api1
           ports:
             - containerPort: 80
           env:
@@ -73,25 +43,27 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: client2
-  namespace: app-istio
+  name: api2
+  namespace: api-istio
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: client2
+      app: api
+      api: api2
       version: v1
   template:
     metadata:
       labels:
-        app: client2
+        app: api
+        api: api2
         version: v1
     spec:
-      serviceAccountName: client2
+      serviceAccountName: api2
       containers:
         - image: daime/http-dump
           imagePullPolicy: IfNotPresent
-          name: client2
+          name: api2
           ports:
             - containerPort: 80
           env:
