--- a/simulation/single-cluster/minikube/opa-configmap.yaml
+++ b/simulation/single-cluster/minikube/opa-configmap.yaml
@@ -28,48 +28,42 @@ data:
     import input.attributes.request.http as http_request
     import input.parsed_path
 
-    default allow = true
+    default allow = false
 
+    # Allow health-checks
+    allow {
+        split(http_request.host, ":")[1] == "8282"
+    }
+    allow {
+        split(http_request.host, ":")[1] == "15021"
+    }
     allow {
         parsed_path[0] == "health"
         http_request.method == "GET"
     }
-
     allow {
-        parsed_path[0] == "/"
+        parsed_path[0] == "healthz"
+        http_request.method == "GET"
     }
 
-    allow {
-        roles_for_user[r]
-        required_roles[r]
+    allow = response {
+        response := {
+          "allowed": checkXfcc,
+          "body": "Hello World!!!",
+        }
     }
 
-    roles_for_user[r] {
-        r := user_roles[user_name][_]
+    deny = response {	    
+        response := {
+        "allowed": checkXfcc,
+        "body": "Hello World!!!",
+        }
     }
 
-    required_roles[r] {
-        perm := role_perms[r][_]
-        perm.method = http_request.method
-        perm.path = http_request.path
+    checkXfcc {
+      contains(input.attributes.request.http.headers["x-forwarded-client-cert"], api_whitelist[_])
     }
 
-    user_name = parsed {
-        [_, encoded] := split(http_request.headers.authorization, " ")
-        [parsed, _] := split(base64url.decode(encoded), ":")
-    }
-
-    user_roles = {
-        "alice": ["guest"],
-        "bob": ["admin"]
-    }
-
-    role_perms = {
-        "guest": [
-            {"method": "GET",  "path": "/productpage"},
-        ],
-        "admin": [
-            {"method": "GET",  "path": "/productpage"},
-            {"method": "GET",  "path": "/api/v1/products"},
-        ],
-    }
+    api_whitelist = ["spiffe://cluster.local/ns/clientns/sa/client1",
+      "spiffe://cluster.local/ns/clientns/sa/client3",
+    ]
