--- a/simulation/single-cluster/minikube/policy/crd/crd.yaml
+++ b/simulation/single-cluster/minikube/policy/crd/crd.yaml
@@ -2,13 +2,13 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   # name must match the spec fields below, and be in the form: <plural>.<group>
-  name: accesspolicies.graphql.usbank.com
+  name: graphqlpolicies.example.com
 spec:
   # group name to use for REST API: /apis/<group>/<version>
-  group: graphql.usbank.com
+  group: example.com
   # list of versions supported by this CustomResourceDefinition
   versions:
-    - name: v1alpha
+    - name: v1alpha1
       # Each version can be enabled/disabled by Served flag.
       served: true
       # One and only one version must be marked as the storage version.
@@ -76,11 +76,11 @@ spec:
   scope: Namespaced
   names:
     # plural name to be used in the URL: /apis/<group>/<version>/<plural>
-    plural: accesspolicies
+    plural: graphqlpolicies
     # singular name to be used as an alias on the CLI and for display
-    singular: accesspolicy
+    singular: graphqlpolicy
     # kind is normally the CamelCased singular type. Your resource manifests use this.
-    kind: AccessPolicy
+    kind: GraphqlPolicy
     # shortNames allow shorter string to match your resource on the CLI
     shortNames:
     - ap    
