troubleshoot health check failure. had to make default allow to true to make health check succeed, then changed default allow to false.

--- a/simulation/single-cluster/minikube/opa-configmap.yaml
+++ b/simulation/single-cluster/minikube/opa-configmap.yaml
@@ -14,7 +14,7 @@ data:
       istio/authz:
         service: gcs
         resource: bundle.tar.gz
-        persist: true
+        persist: false
     plugins:
       envoy_ext_authz_grpc:
         addr: :9191
