--- a/simulation/single-cluster/minikube/opa-envoy-filter.yaml
+++ b/simulation/single-cluster/minikube/opa-envoy-filter.yaml
@@ -24,8 +24,8 @@ spec:
           typed_config:
             '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
             transport_api_version: V3
-            status_on_error:
-              code: ServiceUnavailable
+#            status_on_error:
+#              code: ServiceUnavailable
             with_request_body:
               max_request_bytes: 8192
               allow_partial_message: true
