--- a/simulation/single-cluster/minikube/auth-plugin.yaml
+++ b/simulation/single-cluster/minikube/auth-plugin.yaml
@@ -144,8 +144,10 @@ data:
 
     kubemgmt_container = {
       "name": "kube-mgmt",
-      "image": "openpolicyagent/kube-mgmt:0.11",
+      "image": "openpolicyagent/kube-mgmt:latest",
       "args": [
+          "--policies=api-istio",
+          "--enable-data",
           "--replicate=example.com/v1alpha1/graphqlpolicies"
       ],
     }
@@ -158,6 +160,10 @@ data:
         "--server",
         "--config-file=/config/config.yaml",
         "--addr=localhost:8181",
+        "--log-level=error",
+        #"--h2c",
+        "--log-format=json-pretty",
+        "--set=decision_logs.console=true",
         "--diagnostic-addr=0.0.0.0:8282",
       ],
       "volumeMounts": [{
