--- a/simulation/single-cluster/minikube/policy/kube-mgmt/load.yaml
+++ b/simulation/single-cluster/minikube/policy/kube-mgmt/load.yaml
@@ -17,7 +17,20 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: Group
-    name: system:serviceaccounts:opa
+    name: system:serviceaccounts:api-istio
+    apiGroup: rbac.authorization.k8s.io
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: opa-viewer
+roleRef:
+  kind: ClusterRole
+  name: view
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+  - kind: Group
+    name: system:serviceaccounts:api-istio
     apiGroup: rbac.authorization.k8s.io
 ---
 kind: Role
@@ -39,5 +52,5 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: Group
-    name: system:serviceaccounts:opa
+    name: system:serviceaccounts:api-istio
     apiGroup: rbac.authorization.k8s.io
