--- a/simulation/single-cluster/minikube/policy/crd/crd.yaml
+++ b/simulation/single-cluster/minikube/policy/crd/crd.yaml
@@ -20,12 +20,6 @@ spec:
             spec:
               type: object
               properties:
-                # osl data api identifier. consider copy to label
-                api_id:
-                  description: OSL Data API identifier. Must be equal to API identifer
-                    that can be extracted from the request to the Data API. (e.g. in 
-                    url or in request header(token attribute or client certificate))
-                  type: string
                 acls:
                   description: List of ACLs supported by this Data API.
                     Should have exactly one API ACL.
@@ -38,16 +32,10 @@ spec:
                     properties:
                       kind:
                         description: Specifies ACL type.
-                          Valid values are API, QUERY, MUTATE, FIELD_GROUP
+                          Valid values are API, MUTATE_FIELDS
                         enum:
                         - API
-                        - QUERY
-                        - MUTATE
-                        - FIELD_GROUP
-                        type: string
-                      name:
-                        description: Query name when kind is QUERY. Mutate name when
-                          kind is MUTATE. Field group name when kind is FIELD_GROUP.
+                        - MUTATE_FIELDS
                         type: string
                       fields:
                         description: Field names when kind if FIELD_GROUP.
@@ -62,13 +50,6 @@ spec:
                           client principal; certificate or access token attribute.
                           whitelist members are supposed to be added by future API client
                           teams and should be approved by the API owner team.
-                        type: array
-                        items:
-                          type: string
-                      blacklist:
-                        description: List of service accounts that should not access
-                          the resource of this ACL. The blacklist members are
-                          supposed to be added by the API owner
                         type: array
                         items:
                           type: string
