change opa envoy plugin image

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .idea/*
 .DS_Store
 simulation/single-cluster/minikube/policy/rego/perf.txt
+simulation/single-cluster/minikube/minikube-linux-amd64
