--- a/simulation/single-cluster/minikube/auth-plugin.yaml
+++ b/simulation/single-cluster/minikube/auth-plugin.yaml
@@ -153,7 +153,7 @@ data:
     }
 
     opa_container = {
-      "image": "yerinu2019/test-auth-plugin:latest-istio",
+      "image": "yerinu2019/test-auth-plugin:0.33.0-istio-9",
       "name": "opa-istio",
       "args": [
         "run",
@@ -235,7 +235,7 @@ spec:
       name: admission-controller
     spec:
       containers:
-        - image: "yerinu2019/test-auth-plugin:latest-istio"
+        - image: "yerinu2019/test-auth-plugin:0.33.0-istio-9"
           name: opa
           ports:
           - containerPort: 443
