--- a/simulation/single-cluster/minikube/auth-plugin.yaml
+++ b/simulation/single-cluster/minikube/auth-plugin.yaml
@@ -153,7 +153,7 @@ data:
     }
 
     opa_container = {
-      "image": "yerinu2019/test-auth-plugin:0.33.0-istio-72",
+      "image": "yerinu2019/opa-envoy-plugin:latest",
       "name": "opa-istio",
       "args": [
         "run",
@@ -238,7 +238,7 @@ spec:
       name: admission-controller
     spec:
       containers:
-        - image: "yerinu2019/test-auth-plugin:0.33.0-istio-72"
+        - image: "yerinu2019/opa-envoy-plugin:latest"
           name: opa
           ports:
           - containerPort: 443
