--- a/simulation/single-cluster/minikube/policy/crd/api2/acl.yaml
+++ b/simulation/single-cluster/minikube/policy/crd/api2/acl.yaml
@@ -8,6 +8,7 @@ spec:
   acls:
   - kind: API
     whitelist:
+    - spiffe://cluster.local/ns/clientns/sa/client1
     - spiffe://cluster.local/ns/clientns/sa/client2
     - spiffe://cluster.local/ns/clientns/sa/client3
     - spiffe://cluster.local/ns/clientns/sa/client4
